test/Fail/Issue2782.err
Issue2782.agda:33.3-132: error: [SafeFlagPostulate]
Cannot postulate Iseg with safe flag
